# alltrails-mcp-client

./: .gitignore  MANIFEST.in  PARKS_SUMMARY.md  PUBLISHING.md  PUBLISHING_SUMMARY.md  README.md  RELEASE.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
examples/: cache_config.py  demo.py
src/alltrails_mcp/: __init__.py  cache.py  cli.py  parks.py  py.typed  scraper.py  server.py
